crates/iroha_executor_data_model_derive/tests/ui/fail/permission_missing_deserialize.stderr
error[E0277]: the trait bound `MissingDeserialize: JsonDeserialize` is not satisfied
 --> tests/ui/fail/permission_missing_deserialize.rs:7:12
  |
7 | pub struct MissingDeserialize {
  |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonDeserialize` is not implemented for `MissingDeserialize`
 --> tests/ui/fail/permission_missing_deserialize.rs:7:1
  |
7 | pub struct MissingDeserialize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonDeserialize`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
  = note: required for `MissingDeserialize` to implement `DeserializeOwned`
note: required by a bound in `iroha_executor_data_model::permission::Permission`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Permission`

error[E0277]: the trait bound `MissingDeserialize: DeserializeOwned` is not satisfied
 --> tests/ui/fail/permission_missing_deserialize.rs:6:67
  |
6 | #[derive(norito::derive::JsonSerialize, iroha_schema::IntoSchema, Permission)]
  |                                                                   ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonDeserialize` is not implemented for `MissingDeserialize`
 --> tests/ui/fail/permission_missing_deserialize.rs:7:1
  |
7 | pub struct MissingDeserialize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonDeserialize`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
  = note: required for `MissingDeserialize` to implement `DeserializeOwned`
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function
  = note: this error originates in the derive macro `Permission` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingDeserialize: DeserializeOwned` is not satisfied
 --> tests/ui/fail/permission_missing_deserialize.rs:7:12
  |
7 | pub struct MissingDeserialize {
  |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `JsonDeserialize` is not implemented for `MissingDeserialize`
 --> tests/ui/fail/permission_missing_deserialize.rs:7:1
  |
7 | pub struct MissingDeserialize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `JsonDeserialize`:
            ()
            AbiVersion
            AbsoluteOutlier
            AccessSetHints
            AccountAddress
            AccountController
            AccountDetails
            AccountEvent
          and $N others
  = note: required for `MissingDeserialize` to implement `DeserializeOwned`
note: required by a bound in `name`
 --> $WORKSPACE/crates/iroha_executor_data_model/src/permission.rs
  |
  | pub trait Permission: JsonSerialize + JsonDeserializeOwned + IntoSchema {
  |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Permission::name`
  |     /// Permission id, according to [`IntoSchema`].
  |     fn name() -> Ident {
  |        ---- required by a bound in this associated function
